# brickbreak

./: .gitignore  CMakeLists.txt  Diagramme sans nom.drawio  README.md  brickbreak.io
cmake/: FindSDL2_image.cmake
lib/model/: Game.h  Grid.h  Score.h
lib/model/bonus/: Bonus.h  BonusBall.h  BonusPlateform.h  Transformer.h  TransformerBall.h  TransformerPlateform.h
lib/model/items/: Solid.h
lib/model/items/ball/: Ball.h
lib/model/items/brick/: Brick.h
lib/model/items/grid/: Grid.h
lib/model/items/platform/: Platform.h
lib/model/items/wall/: Wall.h
lib/view/: GameScreen.h  HomeScreen.h  MainWindow.h  Screen.h  Window.h
lib/view/itemView/: BallView.h  BrickView.h  GridView.h  TransformerView.h  WallView.h
src/: Test.cpp  main.cpp  pacman.cpp
src/model/: Game.cpp  Grid.cpp  Score.cpp
src/model/bonus/: Bonus.cpp  Transformer.cpp
src/model/items/: Solid.cpp
src/model/items/ball/: Ball.cpp
src/model/items/brick/: Brick.cpp
src/model/items/grid/: Grid.cpp
src/model/items/platform/: Platform.cpp
src/model/items/wall/: Wall.cpp
src/view/: GameScreen.cpp  HomeScreen.cpp  MainWindow.cpp  Screen.cpp  Window.cpp
src/view/itemView/: BallView.cpp  BrickView.cpp  GridView.cpp  TransformerView.cpp  WallView.cpp
