cmake_minimum_required(VERSION 3.7)

project(Test LANGUAGES CXX)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)

add_executable(${PROJECT_NAME} "")
file(GLOB_RECURSE SOURCES src/*.cpp)

target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
include_directories(PRIVATE ${SDL2_INCLUDE_DIRS} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(PRIVATE ${SDL2_IMAGE_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/lib" ${SDL2_IMAGE_INCLUDE_DIRS})
target_compile_definitions(${PROJECT_NAME} PRIVATE "SDL_MAIN_HANDLED")
target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} )

IF (MSVC)
	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
ENDIF()